fix: show ชมรม and อื่นๆ in dashboard
